# x-fulltext-fetcher

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LEGAL.md  METHODS.md  ROADMAP.md
examples/: links.txt  sources.json
scripts/: fetch_x_fulltext.py  run_app.py
skills/x-fulltext-fetcher/: SKILL.md
skills/x-fulltext-fetcher/agents/: openai.yaml
skills/x-fulltext-fetcher/references/: methods.md
skills/x-fulltext-fetcher/scripts/: fetch_x_fulltext.py
src/x_fulltext_fetcher/: __init__.py  __main__.py  app.py  fetch.py
tests/: test_feed_outputs.py  test_local_app.py  test_url_parsing.py
web/: app.js  index.html  reader.html  reader.js  sample-feed.json  styles.css
